# RuleJIT

./: .clang-format  .gitignore  CMakeLists.txt  readme.md  uimain.py
doc/: example.xml  example1.0.xml  example1.1.xml
doc/collected/: air2v2rule.xml  car1v1rule.xml
doc/collected/src/: CMakeLists.txt  cqinterface.hpp  funcdef.hpp  ruleset.cpp  ruleset.hpp  testmain.cpp  typedef.hpp
doc/cq/: h.xml  rule.xml
doc/cq/car_1v1_behaviour/: car_1v1_behaviour.xml  rule.xml
doc/doxygen/: Doxyfile
doc/draw/: draw.py
doc/gc/: basegc.hpp
doc/glu/: manual.md  readme.md
doc/lex_yacc_test/: exprToken.l  lex.yy.c
doc/meeting/: 摘要.docx
doc/python_prototype/: main.py
doc/restriction/: EBNF.txt  test.kt
doc/test_xml/: BVR1.0.xml  WVR1.0(1).xml  WVR1.0.xml  car_rule.xml  example1.0.xsd  rule(2).xml  rule.xml  rule_backup.xml  rule_err.xml  simple.xml
doc/xml_design/: example1.0.xml  example1.0.xsd  example1.1.xml
include/: CMakeLists.txt
include/ast/: ast.hpp  astprinter.hpp  astvisitor.hpp  type.hpp  visitor.hpp
include/defines/: language.hpp  typedef.hpp
include/frontend/: astchecker.h  astgen.h  irgen.h  language.hpp  lexer.h  lexer.hpp  parser.h  parsergen.hpp  typecontext.hpp
include/ir/: irgen.h
include/tools/: myassert.hpp
src/: CMakeLists.txt
src/ast/: ast.hpp  astprinter.hpp  astvisitor.hpp  context.hpp  decompiler.hpp  escapedanalyzer.hpp  type.cpp  type.hpp  typeinferer.hpp  usedvariable.hpp
src/backend/: CMakeLists.txt
src/backend/cbe/: cppgen.hpp  metainfo.hpp  template.hpp
src/backend/cppbe/: CMakeLists.txt  cppengine.cpp  cppengine.h  csvaluemap2struct.hpp  metainfo.hpp  subrulesetgen.hpp  template.hpp
src/backend/cq/: CMakeLists.txt  cqinterpreter.hpp  cqresourcehandler.cpp  cqresourcehandler.h  cqrulesetengine.cpp  cqrulesetengine.h
src/backend/executor/: CMakeLists.txt
src/backend/executor/cq/: cqresourcehandler.hpp
src/backend/jit/: CMakeLists.txt  jitcodegen.hpp  jitengine.hpp
src/backend/pybe/: CMakeLists.txt  pybe.cpp  pybe.h  pycodegen.hpp  template.py
src/bytecode/: CMakeLists.txt  bytecode.cpp  bytecode.h  bytecode.hpp  dynamicstruct.hpp  memmanager.hpp  soa.hpp  typemanager.hpp
src/defines/: CMakeLists.txt  language.hpp  marco.hpp  typedef.hpp
src/frontend/: CMakeLists.txt  astchecker.cpp  astchecker.h  astgen.cpp  astgen.h  capturechecker.hpp  context.hpp  errorinfo.hpp  exprToken.l  irgen.cpp  lex.yy.c  lex.yy.cc  lexer.cpp  lexer.h  parser.cpp  parser.h  parsergen.hpp  postprocessing.hpp  purefunctionchecker.hpp  rulesetparser.hpp  semantic.cpp  semantic.h  semantic.hpp  templateins.hpp  typeinferer.h
src/frontend/ruleset/: rulesetparser.cpp  rulesetparser.h  rulesetxmlparser.cpp  rulesetxmlparser.h
src/ir/: CMakeLists.txt  irgen.cpp  irgen.h  irgen.hpp  irholder.hpp
src/release/: CMakeLists.txt
src/release/cq_codegen/: CMakeLists.txt  codegenmain.cpp
src/release/cq_expressionchecker/: CMakeLists.txt  expressionchecker.cpp  expressionchecker.h
src/release/cq_interpreter/: CMakeLists.txt
src/release/cq_interpreter/RuleEngine/: CMakeLists.txt  RuleEngine.cpp  RuleEngine.h
src/release/cq_interpreter/csmodel_base/: csmodel_base.h
src/release/cq_interpreter/model_test/: CMakeLists.txt  data.hpp  main.cc  testcase.hpp
src/release/cq_modelxmlgen/: CMakeLists.txt  main.cpp  xmlgen.hpp
src/release/cq_pygen/: CMakeLists.txt
src/test/: CMakeLists.txt  astprintermain.cpp  bytecodemain.cpp  cppbemain.cpp  cqmain.cpp  gcmain.cpp  imguimain.cpp  irmain.cpp  jitmain.cpp  lexermain.cpp  main.cpp  parsemain.cpp  pybemain.cpp  replmain.cpp  semanticmain.cpp  temp.cpp  typeparsemain.cpp
src/test/unittest/: CMakeLists.txt  testmain.cpp
src/tools/: CMakeLists.txt  anyprocess.hpp  dynamicstruct.hpp  match.hpp  myassert.hpp  myfunction.hpp  mygetopt.hpp  myrange.hpp  pointercast.hpp  printcsvaluemap.hpp  seterror.hpp  showmsg.hpp  stringprocess.hpp
src/tools/gc/: basegc.hpp  cppgc.hpp  gc.hpp  marksweepgc.hpp  nogc.hpp  notsafegc.hpp  soa.hpp
