add_subdirectory(cbe)
add_subdirectory(cppbe)
add_subdirectory(jit)
add_subdirectory(cq)

file(GLOB_RECURSE SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cc ${CMAKE_CURRENT_SOURCE_DIR}/*.C ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

# set(BACKEND_SRC ${SRC} PARENT_SCOPE)
set(C_BACKEND_SRC ${C_BACKEND_SRC} PARENT_SCOPE)
set(CPP_BACKEND_SRC ${CPP_BACKEND_SRC} PARENT_SCOPE)
set(JIT_BACKEND_SRC ${JIT_BACKEND_SRC} PARENT_SCOPE)
set(CQ_BACKEND_SRC ${CQ_BACKEND_SRC} PARENT_SCOPE)