get_property(dirs DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)

file(TIMESTAMP ${CMAKE_CURRENT_SOURCE_DIR}/exprToken.l L_MODIFIED_TIME "%s")
file(TIMESTAMP ${CMAKE_CURRENT_SOURCE_DIR}/lex.yy.c C_MODIFIED_TIME "%s")

if(C_MODIFIED_TIME EQUAL "" OR C_MODIFIED_TIME STRLESS L_MODIFIED_TIME)
    message(STATUS "[flex call] regenerate lex.yy.c")
    execute_process(COMMAND wsl flex exprToken.l WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
endif()

# ${CMAKE_CURRENT_SOURCE_DIR}/*.c 
file(GLOB_RECURSE FRONTEND_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cc ${CMAKE_CURRENT_SOURCE_DIR}/*.C)

add_library(${PROJ_NAME}_Frontend STATIC ${FRONTEND_SRC})