cmake_minimum_required(VERSION 3.6)
set(PROJ_NAME ruleset)
project(${PROJ_NAME})
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_BUILD_TYPE RelWithDebInfo)

if(MSVC)
  string(APPEND CMAKE_CXX_FLAGS " /permissive- /Zc:__cplusplus")
endif()

add_library(${PROJ_NAME} SHARED ruleset.cpp)
add_executable(${PROJ_NAME}_test testmain.cpp)
add_dependencies(${PROJ_NAME}_test ${PROJ_NAME})
if(UNIX)
target_link_libraries(${PROJ_NAME} dl)
else(UNIX)
endif(UNIX)